--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.graalvm.buildtools.native' version '0.9.28'
-    id 'org.graalvm.buildtools.jvm-ecosystem-gradle' version '0.9.28'
 }
 
 group = 'com.gpc.catalog'
@@ -29,7 +27,9 @@ dependencies {
     implementation 'com.google.cloud:google-cloud-bigquery'
     
     // Rate Limiting
-    implementation("io.github.resilience4j:resilience4j-ratelimiter:2.3.0")
+    implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.3.0'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
+    implementation 'io.github.resilience4j:resilience4j-annotations:2.3.0'
     
     // Lombok
     compileOnly 'org.projectlombok:lombok'
